# rust-aws-lambda-template

./: Cargo.toml  Makefile
.github/workflows/: pipeline.yml
docs/: README.md
src/: lib.rs  main.rs
