[package]
name = "rust-template"
version = "0.0.0"
authors = ["Heiko Alexander Weber <heiko.a.weber@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A rust template repository"
readme = "docs/README.md"
homepage = "https://replicadse.github.io/rust-template/"
repository = "https://github.com/replicadse/rust-template"
keywords = ["template"]
categories = []


[profile]
  [dev]
    opt-level = 0
  [release]
    opt-level = 3

[dev-dependencies]
